syntax = "proto3";

package blog;

import "google/protobuf/empty.proto";

service PostService {
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {}
  rpc GetPost(GetPostRequest) returns (Post) {}
  rpc CreatePost(CreatePostRequest) returns (google.protobuf.Empty) {}
  rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty) {}
  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty) {}
}

enum Order {
  ORDER_UNKNOWN = 0;
  ORDER_ASC = 1;
  ORDER_DESC = 2;
}

message ListPostsRequest {
  int32 Page = 1;
  int32 PageSize = 2;
  Order Order = 3;
  string Sort = 4;
}

message ListPostsResponse {
  repeated Post Posts = 1;
  int32 Page = 2;
  int32 PageSize = 3;
  int32 TotalPages = 4;
}

message GetPostRequest {
  int32 Id = 1;
}

message CreatePostRequest {
  string Title = 1;
  string Content = 2;
}

message UpdatePostRequest {
  int32 Id = 1;
  string Title = 2;
  string Content = 3;
}

message DeletePostRequest {
  int32 Id = 1;
}

message Post {
  int32 Id = 1;
  string Title = 2;
  string Content = 3;
}
